fix: adjust alignment of subtask input wrapper for better layout

--- a/src/app/main-content/board/task-card/task-details/edit-task/edit-task.component.scss
+++ b/src/app/main-content/board/task-card/task-details/edit-task/edit-task.component.scss
@@ -185,7 +185,7 @@
         overflow-y: auto;
         @include all.d-flex(
           $flexdir: column,
-          $jc: space-between,
+          $jc: flex-start,
           $alit: flex-start
         );
         gap: 0.5rem;
